Add new files